--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ show_downloads: false
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-cayman
+theme: jekyll-theme-slate
 gems:
   - jekyll-feed
 exclude:
